Fixes img and p spacing issues

--- a/src/components/Story/Body.less
+++ b/src/components/Story/Body.less
@@ -174,7 +174,8 @@
     max-height: none;
     display: inline-block;
     vertical-align: middle;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   hr {
@@ -200,8 +201,8 @@
       font-size: 21px;
     }
 
-    p:not(:last-child) {
-      margin: 0 0 1.5rem 0;
+    p {
+      margin: 0.75rem 0 0.75rem 0;
     }
   }
 }
